@@ -21,6 +21,9 @@ Version 1.4.2:
 		- Thanks to @tucan39 for reporting
 	Fixed bug with unknown BBCodes being handled incorrectly.
 		- Thanks to @KN4CK3R for reporting
+	Fixed bug with % based widths and heights.
+	Fixed bug with editor height when created in a hidden div.
+		- Thanks to @berridgeab for reporting
 
 Version 1.4.1:
 	Dropped GPL to match jQuery license.
